--- a/bundles/org.openhwgroup.corev.ide.ui.intro/content/root.xhtml
+++ b/bundles/org.openhwgroup.corev.ide.ui.intro/content/root.xhtml
@@ -16,13 +16,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>root.xhtml</title>
   <link rel="stylesheet" href="styles/root.css" type="text/css" />
-  <link rel="stylesheet" href="styles/bootstrap.min.css" type="text/css" />
 </head>
 
 <body class="body">
   <div class="content">
-    <img class="p-2 rounded mx-auto d-block" id="icon" src="images/ohw128.png"></img>
-    <h3 class="p-2 flex-fill" style="margin-top: auto;margin-bottom: auto;">Welcome to CORE-V IDE!</h3>
+    <img id="icon" src="images/ohw128.png"></img>
+    <h3>Welcome to CORE-V IDE!</h3>
     <p>CORE-V is a series of RISC-V based open-source cores with associated processor subsystem IP, tools and software
       for electronic system designers. The CORE-V family provides quality core IP in line with industry best practices
       in both silicon and FPGA optimized implementations. These cores can be used to facilitate rapid design innovation
