#62 Create some help content
Added bundles to aggregator, added intro menu entry

Signed-off-by: Nikifor Fedorov <zelenyhleb@gmail.com>

--- a/bundles/org.openhwgroup.corev.ide.ui.intro/content/root.xhtml
+++ b/bundles/org.openhwgroup.corev.ide.ui.intro/content/root.xhtml
@@ -26,6 +26,7 @@
       for electronic system designers. The CORE-V family provides quality core IP in line with industry best practices
       in both silicon and FPGA optimized implementations. These cores can be used to facilitate rapid design innovation
       and ensure effective manufacturability of production SoCs.</p>
+    <a href="http://org.eclipse.ui.intro/runAction?pluginId=org.openhwgroup.corev.ide.ui.intro&#38;class=org.openhwgroup.corev.ide.ui.intro.ShowHelpAction">Show user guide</a>
   </div>
 </body>
 
