--- a/bundles/org.openhwgroup.corev.ide.ui.intro/content/root.xhtml
+++ b/bundles/org.openhwgroup.corev.ide.ui.intro/content/root.xhtml
@@ -13,21 +13,35 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>root.xhtml</title>
-  <link rel="stylesheet" href="styles/root.css" type="text/css" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>root.xhtml</title>
+<link rel="stylesheet" href="styles/root.css" type="text/css" />
 </head>
 
 <body class="body">
-  <div class="content">
-    <img id="icon" src="images/ohw128.png"></img>
-    <h3>Welcome to CORE-V IDE!</h3>
-    <p>CORE-V is a series of RISC-V based open-source cores with associated processor subsystem IP, tools and software
-      for electronic system designers. The CORE-V family provides quality core IP in line with industry best practices
-      in both silicon and FPGA optimized implementations. These cores can be used to facilitate rapid design innovation
-      and ensure effective manufacturability of production SoCs.</p>
-    <a href="http://org.eclipse.ui.intro/runAction?pluginId=org.openhwgroup.corev.ide.ui.intro&#38;class=org.openhwgroup.corev.ide.ui.intro.ShowHelpAction">Show user guide</a>
-  </div>
+	<div class="content">
+		<img id="icon" src="images/ohw128.png"></img>
+		<h3>Welcome to CORE-V IDE!</h3>
+		<p>CORE-V is a series of RISC-V based open-source cores with
+			associated processor subsystem IP, tools and software for electronic
+			system designers. The CORE-V family provides quality core IP in line
+			with industry best practices in both silicon and FPGA optimized
+			implementations. These cores can be used to facilitate rapid design
+			innovation and ensure effective manufacturability of production SoCs.</p>
+		<a
+			href="http://org.eclipse.ui.intro/runAction?pluginId=org.openhwgroup.corev.ide.ui.intro&#38;class=org.openhwgroup.corev.ide.ui.intro.ShowHelpAction">Show
+			user guide</a>
+		<p>
+			<a
+				href="http://org.eclipse.ui.intro/runAction?pluginId=org.openhwgroup.corev.ide.ui.intro&#38;class=org.openhwgroup.corev.ide.ui.intro.CreateProjectAction">Create
+				new CORE-V project</a>
+		</p>
+		<p>
+			<a
+				href="http://org.eclipse.ui.intro/runAction?pluginId=org.openhwgroup.corev.ide.ui.intro&#38;class=org.openhwgroup.corev.ide.ui.intro.DefineBoardAction">Define
+				a board</a>
+		</p>
+	</div>
 </body>
 
 </html>
