Added toolchain wizard to welcome, fixed images
Signed-off-by: Nikifor Fedorov <zelenyhleb@gmail.com>

--- a/bundles/org.openhwgroup.corev.ide.ui.intro/content/root.xhtml
+++ b/bundles/org.openhwgroup.corev.ide.ui.intro/content/root.xhtml
@@ -41,6 +41,11 @@
 				href="http://org.eclipse.ui.intro/runAction?pluginId=org.openhwgroup.corev.ide.ui.intro&#38;class=org.openhwgroup.corev.ide.ui.intro.DefineBoardAction">Define
 				a board</a>
 		</p>
+		<p>
+			<a
+				href="http://org.eclipse.ui.intro/runAction?pluginId=org.openhwgroup.corev.ide.ui.intro&#38;class=org.openhwgroup.corev.ide.ui.intro.ImportToolchainAction">Import
+				a toolchain</a>
+		</p>
 	</div>
 </body>
 
